--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -2,7 +2,7 @@ name: End to end
 
 on:
   push:
-    branches: [ master ]
+    branches: [Tulare County Regional Transit Agency]
     paths-ignore:
       - '**.md'
       - 'Dockerfile'
@@ -66,8 +66,8 @@ jobs:
           versionTag: ${{ steps.prep.outputs.versionTag }}
         with:
           arguments: shadowJar
-      #- name: Validate dataset from -- ACRONYM #<-- uncomment this line, replace ACRONYM by the name of the agency/publisher acronym
-      #  run: java -jar application/cli-app/build/libs/*.jar --url DATASET_PUBLIC_URL --input [[[ACRONYM]]].zip --extract pathToExtractedZipContent --output validationResultDirectory #<-- uncomment this line,
+      #- name: Validate dataset from -- TCRTA<-- uncomment this line, replace ACRONYM by the name of the agency/publisher acronym
+      #  run: java -jar application/cli-app/build/libs/*.jar --url https://tularecog.org/tcag/data-gis-modeling/gtfs-data/tulare-county-regional-transit-agency-tcrta-gtfs/ --input [[[TCRTA]]].zip --extract pathToExtractedZipContent --output validationResultDirectory <-- uncomment this line,
       #replace ACRONYM and [[[ACRONYM]]] by the agency/publisher acronym. Also replace DATASET_PUBLIC_URL by a public link to a GTFS Schedule zip archive
       - name: Validate dataset from -- Greater Sydney
         run: java -jar main/build/libs/*.jar --url https://openmobilitydata.org/p/transport-for-nsw/237/latest/download --output_base output --country_code au --storage_directory gs.zip
